2012-05-12  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (get or read binary operations): fixed reckless label to
	be allow to get custom port.

2012-05-10  Takashi Kato  <ktakashi@ymail.com>

	* src/vmlib.stub (library-exported-set!): modified the behaviour to
	append the export spec. now export syntax can be appeared multiple
	times in one library.

2012-05-07  Takashi Kato  <ktakashi@ymail.com>

	* src/extlib.stub (get-output-bytevector): fixed to reset buffer.

	* src/port.c (Sg_SetPortPosition): fixed set port position.

	* src/null.stub (null): modified bytevector-copy to take start and end
	optional paraemeters.

2012-05-04  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm (rfc x.509): fixed unbound variable error
	calling make-basic-constrains.

2012-05-03  Takashi Kato  <ktakashi@ymail.com>

	* ext/socket/socket.c (socket_read_u8_all): fixed reading all binary
	data from socket. Before it wasn't finish.

2012-04-23  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rsa/pkcs/%3a12/keystore.scm (load-keystore): fixed loading
	certificates. it did not load any certificate before.

	* src/port.c (port_cpl): fixed class hierachy of port.

2012-04-20  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/base64.scm (base64-decode-string): modified to return
	bytevector when optional transcoder was #f.

2012-04-19  Takashi Kato  <ktakashi@ymail.com>

	* src/port.c (Sg_MakeByteArrayOutputPort): improved performance of
	bytevector-output-port and string-output-port.

2012-03-29  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/rfc/x.509.scm: added x509 utility library.

2012-03-18  Takashi Kato  <ktakashi@ymail.com>

	* boot/compiler.scm (define-library): added missing feature cond-expand.

2012-03-12  Takashi Kato  <ktakashi@ymail.com>

	* sitelib/sagittarius/mop/allocation.scm (sagittarius mop allocation):
	added :allocation supported metaclass.

2012-03-09  Takashi Kato  <ktakashi@ymail.com>
